--- a/main.css
+++ b/main.css
@@ -4,6 +4,12 @@ en las secciones señaladas */
 /*Já deixaremos o básico de reset de estilos. Caso queira adicionar mais informações
 coloque nas sessões indicadas*/
 
+@import url("styles/menu.css");
+@import url("styles/title.css");
+@import url("styles/reset.css");
+@import url("styles/about.css");
+@import url("styles/common.css");
+
 :root{
     /* Inserta la variable de los otros colores inspeccionando el exemplo de figma */
     /*Se esforce para trabalhar com variáveis, é uma dica profissional valiosa*/
@@ -12,12 +18,12 @@ coloque nas sessões indicadas*/
 }
 
 body {
-    box-sizing: border-box;
     background-color: var(--cor-de-fundo) ;
     font-family: 'Raleway';
     margin: 0;
     padding: 0;
     line-height: 1;
+    
 }
 ol, ul,li {
     list-style: none;
@@ -27,65 +33,23 @@ a{
     color: var(--cor-de-link);
 }
 
-/*En este desafío nosostros gustaríamos que ustedes intentaran utilizar la metodología BEM. 
-
-Lo que es el BEM?
-
-BEM (Bloque, Elemento, Modificador) es un enfoque basado en componentes para el 
-desarrollo web. La idea detrás de esto es dividir la interfaz de usuario en bloques
-independientes. Esto hace que el desarrollo de la interfaz sea fácil y rápido, incluso
-con una interfaz de usuario compleja, y permite la reutilización del código existente sin copiar y pegar.
-
-Enlace de la documentación oficial!
-https://en.bem.info/methodology/quick-start/*/
-
-/*Sección Menu*/
-
-section.menu{
-
+.tudo{
+    width: 100%;
+    padding-left: 152px; /* Padding izquierdo para la separación */
+    padding-right: 152px; /* Padding derecho para la separación */
+    color: #464646;
+    box-sizing: border-box;
 }
 
-/*Sección Title*/
 
-section.title{
 
-}
 
-/*Sección About*/
 
-section.about{
 
-}
 
-/*Sección Hobbies*/
 
-section.hobbies{
-    
-}
 
-/* Experiencia Académica*/
 
-section.academic{
-
-}
-
-/* experiencia*/
-
-section.experience{
-
-}
-
-/*Contacto*/
-
-section.formcontato{
-
-}
-
-/*footeer*/
-
-section.footer{
-   
-}
 
 /* Vamos a desafiarnos trabajando con responsividad?
 Utiliza las referencias de los breakpoints @media abajo */
